--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="El Libro Escarlata" />
+    <meta property="og:description" content="Juego en desarrollo" />
+    <meta property="og:image" content="https://libroescarlata.netlify.app/img/enemies/goblin.png" />
+    <meta property="og:url" content="https://libroescarlata.netlify.app/" />
     <title>El Libro Escarlata</title>
   </head>
   <body>
