--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:url" content="https://libroescarlata.netlify.app/" />
     <title>El Libro Escarlata</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="rpgui-cursor-default">
+    <div id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
