--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://libroescarlata.netlify.app/" />
     <title>El Libro Escarlata</title>
   </head>
-  <body class="rpgui-cursor-default">
+  <body class="rpgui-cursor-default rpgui-content">
     <div id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
