--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="El Libro Escarlata" />
     <meta property="og:description" content="Juego en desarrollo" />
-    <meta property="og:image" content="https://libroescarlata.netlify.app/img/enemies/goblin.png" />
+    <meta
+      property="og:image"
+      content="https://libroescarlata.netlify.app/img/enemies/goblin.png"
+    />
     <meta property="og:url" content="https://libroescarlata.netlify.app/" />
     <title>El Libro Escarlata</title>
   </head>
   <body class="rpgui-cursor-default rpgui-content">
-    <div id="root" ></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
